# synthpub

./: .cursorrules  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION.md  LICENSE  README.md  SECURITY.md  TODO.md  build.py  desktop_app.py  desktop_build.sh  docker-compose.yml  pyproject.toml  requirements-piper.txt  requirements.txt  run.py  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: lint.yml  tests.yml
ai_curator/: orchestrator.py
ai_curator/agents/: article_synthesizer.py  base_agent.py  relevance_filter.py  (+1 more)
api/: __init__.py  app.py  article_db.py  config.py  db.py  models.py
curator/: article_generator.py  article_refiner.py  article_relevance_filter.py  config.yaml  topic_manager.py
docs/: IMPLEMENTATION.md  TODO.md  api-docs.html  index.html  script.js  styles.css
examples/: piper_tts_example.py  show_article_blame.py
ext_sources/: html_extractor.py
frontend/: README.md  article.html  index.html  logs.html  package-lock.json  package.json  project.html  settings.html  tailwind.config.ts
godot-desktop/: card_theme.tres  icon.svg.import  main.tscn  project.godot  projects.tscn
scripts/: db_cli.py  desktop_build.bat  desktop_build.sh  desktop_build_linux.sh  run_examples.sh  seed_data.py  test_article_workflow.py  test_ollama.py
src/: SynthPub.py  desktop_app.py  feed_processor_test.py  log_test.py  r4b-create-script.py  redoc-export.py  run_scheduler.py  test_kokoro.py
src/api/: app.py  (+2 more)
tests/: __init__.py  conftest.py
(+227 files in other folders)
